# vmemcached-rs

./: Cargo.toml  Makefile  README.md  release
.github/workflows/: ci.yaml
dockerfiles/: docker-compose.base.yml  docker-compose.ci.yml
dockerfiles/haproxy/: haproxy.cfg
src/: client.rs  codec.rs  connection.rs  driver.rs  error.rs  lib.rs  manager.rs  old_connection.rs  settings.rs  value.rs
src/driver/: mod.rs
src/parser/: ascii.rs  mod.rs
src/protocol/: ascii.rs  mod.rs
src/stream/: mod.rs  udp_stream.rs
tests/: helpers.rs  setup_tests.sh  test_ascii.rs  test_configurations.rs  test_haproxy.rs  test_serde_objects.rs  tests.rs
